Fixed graphic bug on small mobiles

--- a/src/components/game/Choice.scss
+++ b/src/components/game/Choice.scss
@@ -7,7 +7,7 @@
     align-items: center;
     flex:1;
 
-    min-width: 350px;
+    min-width: 320px;
     min-height: 40vh;
 
     border:1px solid rgba(0,0,0,0.1);  
