--- a/src/components/game/Round.scss
+++ b/src/components/game/Round.scss
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width:80%;
+    min-width:320px;
     margin:0 auto;
     text-align: center;
     box-shadow: 1px 1px 10px rgba(0,0,0, 0.8);
